# modules/swagger/component/GroupComponent.yaml
@@ -1,20 +1,28 @@
 # 모임 관련 컴포넌트 정보
-components:
-  schemas:
-    postGroup:
+components: # 컴포넌트 선언
+  schemas: # 스키마 정의
+
+    ###################################################
+    ################## [RequestBody] ##################
+    ###################################################
+    # 모임 생성시 필요한 req.body
+    postGroup: # POST '/api/group'
       required:
         - gName
         - gDesc
         - gDday
         - gMaxMem
         - gCategory
+        - mTitle
+        - mContent
+        - mLevel
       type: object
       description: 모임 생성 시 필요한 정보
-      properties:
+      properties: # req.body로 넘어온 값 정의
         gName:
           type: string
           description: 모임명 (Unique)
-          example: Node 스터디
+          example: Node 스터디 (중복 안됩니다!)
         gDesc:
           type: string
           description: 모임에 대한 설명
@@ -37,17 +45,100 @@ components:
           type: string
           description: 모임 커버 이미지
           example: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSr1_J07ruu0QuBhaD6HSDkvbQdW_OOENXmiA&usqp=CAU
-    postGroupResult:
+        mTitle:
+          type: string
+          description: 미션 제목
+          example: Node.js 강의 듣기
+        mContent:
+          type: string
+          description: 미션 내용
+          example: Node.js 강의 쳅터 1 듣고 오기
+        mLevel:
+          type: integer
+          description: 난이도에 따른 점수 부여 (상 = 5점, 중 = 3점, 하 = 1점)
+          example: 5
+          
+    # 모임 수정시 필요한 req.body
+    patchGroup: # PATCH '/api/group'
       required:
-        - gSeq
         - gName
         - gDesc
         - gDday
         - gMaxMem
         - gCategory
       type: object
-      description: 모임 정보
-      properties:
+      description: 모임 수정 시 필요한 정보
+      properties: # req.body로 넘어온 값 정의
+        gSeq:
+          type: integer
+          format: int64
+          description: 모임 시퀀스
+          example: 1
+        gName:
+          type: string
+          description: 모임명 (Unique)
+          example: 정보처리기사 실기 대비반 (중복 안됩니다!)
+        gDesc:
+          type: string
+          description: 모임에 대한 설명
+          example: 정보처리기사 실기 대비 오프라인 모임입니다!
+        gDday:
+          type: string
+          format: date-time
+          description: 모임 자체의 디데이
+          example: 2023-10-31
+        gMaxMem:
+          type: integer
+          format: int64
+          description: 모임 최대 인원
+          example: 20
+        gCategory:
+          type: string
+          description: ex = 운동 / re = 독서 / st = 스터디 / eco = 경제 / lan = 언어 / cert = 자격증 / it = IT / etc = 기타
+          example: cert
+        gCoverImg:
+          type: string
+          description: 모임 커버 이미지
+          example: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVnwfCZtvVrf0NdXWT4YQp_aVEFlZ5-kuUfw&usqp=CAU
+
+    # 모임 삭제시 필요한 req.body
+    deleteGroup: # DELETE '/api/group'
+      required:
+        - gSeq
+      type: object
+      description: 모임 삭제 시 필요한 정보
+      properties: # req.body로 넘어온 값 정의
+        gSeq:
+          type: integer
+          format: int64
+          description: 모임 시퀀스
+          example: 1
+
+    ###################################################
+    ################## [Responses] ####################
+    ###################################################
+    # 기본적인 응답 object (성공 여부, 응답 메시지)
+    groupApiResult: 
+      required:
+        - isSuccess
+        - msg
+      type: object
+      description: 기본적인 응답 object (성공 여부, 응답 메시지)
+      properties: # res.json으로 정의한 값 정의
+        isSuccess:
+          type: boolean
+          description: 성공 여부
+          example: true
+        msg:
+          type: string
+          description: 응답 메시지
+          example: 성공
+
+    # 생성된 모임 정보
+    postGroupResult: # POST '/api/group'
+      type: object
+      description: 생성된 모임 정보
+      properties: # res.json으로 정의한 값 정의
         gSeq:
           type: integer
           format: int64
@@ -79,6 +170,11 @@ components:
           type: string
           description: 모임 커버 이미지
           example: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSr1_J07ruu0QuBhaD6HSDkvbQdW_OOENXmiA&usqp=CAU
+        gTotalScore:
+          type: integer
+          format: int64
+          description: 현재 미션 총 점수(현재 진행되는 미션에 대한 총 점수)
+          example: 15
         createdAt:
           type: string
           format: date-time
@@ -89,3 +185,55 @@ components:
           format: date-time
           description: 모임 수정 시간
           example: 2023-10-28
+
+    # 수정된 모임 정보
+    patchGroupResult: # PATCH '/api/group'
+      type: object
+      description: 수정된 모임 정보
+      properties: # res.json으로 정의한 값 정의
+        gSeq:
+          type: integer
+          format: int64
+          description: 모임 시퀀스
+          example: 1
+        gName:
+          type: string
+          description: 모임명 (Unique)
+          example: 정보처리기사 실기 대비반 (중복 안됩니다!)
+        gDesc:
+          type: string
+          description: 모임에 대한 설명
+          example: 정보처리기사 실기 대비 오프라인 모임입니다!
+        gDday:
+          type: string
+          format: date-time
+          description: 모임 자체의 디데이
+          example: 2023-10-31
+        gMaxMem:
+          type: integer
+          format: int64
+          description: 모임 최대 인원
+          example: 20
+        gCategory:
+          type: string
+          description: ex = 운동 / re = 독서 / st = 스터디 / eco = 경제 / lan = 언어 / cert = 자격증 / it = IT / etc = 기타
+          example: cert
+        gCoverImg:
+          type: string
+          description: 모임 커버 이미지
+          example: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVnwfCZtvVrf0NdXWT4YQp_aVEFlZ5-kuUfw&usqp=CAU
+        gTotalScore:
+          type: integer
+          format: int64
+          description: 현재 미션 총 점수(현재 진행되는 미션에 대한 총 점수)
+          example: 15
+        createdAt:
+          type: string
+          format: date-time
+          description: 모임 생성 시간
+          example: 2023-10-28
+        updatedAt:
+          type: string
+          format: date-time
+          description: 모임 수정 시간
+          example: 2023-10-31
